fazendo alteração nas imgagens

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div id="foto">
-            <img src="/img/manha.jpg" alt="manhã" id="image">
+            <img id="image">
         </div>
 
     </section>
