fazendo alteração nas imgagens

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div id="foto">
-            <img id="image">
+            <img id="image" alt="Imagem do período do dia">
         </div>
 
     </section>
