Finalizei projeto timeofday

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
         <div id="msg">
             ..
         </div>
-
+        <br>
         <div id="foto">
             <img id="image" alt="Imagem do período do dia">
         </div>
-
+        <br>
+        <div id="msg2">
+            ..
+        </div>
     </section>
 
     <footer>
