--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>time of day</title>
     <link rel="stylesheet" href="TimeStyle.css">
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">  
 </head>
 
 <body onload="carregar()">
